# docs/swagger.yaml
@@ -62,6 +62,25 @@ paths:
       summary: 问题列表
       tags:
       - 公共方法
+  /rank-list:
+    get:
+      parameters:
+      - description: 请输入当前页，默认第一页
+        in: query
+        name: page
+        type: integer
+      - description: size
+        in: query
+        name: size
+        type: integer
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 排名
+      tags:
+      - 公共方法
   /register:
     post:
       parameters:
