# router/app.go
@@ -25,6 +25,9 @@ func Router() *gin.Engine {
 	r.POST("/login", service.Login)
 	r.POST("/sendcode", service.SendCode)
 	r.POST("/register", service.Register)
+
+	//排名
+	r.GET("/rank-list", service.GetRankList)
 	//提交记录
 	r.GET("/submit-list", service.GetSubmitList)
 	return r
